--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -1,9 +1,12 @@
 {% extends '../layouts/base.twig' %}
 
 {% block styles %}
-    .sds{
-        background: red;
-    }
+    <style>
+        .sds{
+            background: red;
+        }
+
+    </style>
 {% endblock %}
 
 {% block title %}prueba{% endblock %}
