[UPDATE] upgrade dependencies and gulp file upgrade

--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -13,7 +13,7 @@
 
 {% block content %}
     <div class="prueba">
-        <h1>prueba index ..sdsdsd</h1>
+        <h1>prueba index</h1>
     </div>
 {% endblock %}
 {% block scripts %}
